Testing atom-git

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li>Alicbot</li>
     <li>Polytec, Inc</li>
     <li>Yep 4 Kids Foundation</li>
+    <li>Baskin Robbins</li>
   </ol>
 </body>
 
