This branch will contain the HTML/CSS backbone to the website

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li>Polytec, Inc</li>
     <li>Yep 4 Kids Foundation</li>
     <li>Baskin Robbins</li>
+    <li>Boy Scouts of America</li>
   </ol>
 </body>
 
