Added new pages for projects, contact me, and relevant coursework

--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
 </head>
 
 <body>
+  <img src='images/Devin Pic.png' width='150px' alt='Devin Yerasi Profile Picture' />
   <h1>Devin Ash Yerasi</h1>
+  <a href="https://www.linkedin.com/in/dyerasi/" target='_blank'>LinkedIn</a>
   <p><em>Computer Science and Engineering student at UCLA</em></p>
   <!--emphasis tag does italics but civers content over looks-->
   <p>Software Developer | Game Developer | Web Developer</p>
   <hr noshade, size='3'>
   <h3>Education</h3>
   <h4>UCLA (2018-2022): B.S. Computer Science and Engineering, Minor in Math </h4>
-  <h6>Relevant Courses</h6>
-  <ul>
-    <li>Algorithms</li>
-    <li>C++</li>
-    <li>Discrete Mathematics</li>
-    <li>Linear Algera and Differential Equations</li>
-  </ul>
-  
+
+
+
   <h3>Experience</h3>
   <ol>
-    <li>Alicbot</li>
-    <li>Polytec, Inc</li>
+    <li><a href="https://alichbot.com/welcome" target='_blank'>Alicbot</a></li>
+    <li><a href="https://www.polytec.com/int/" target='_blank'>Polytec, Inc</a></li>
     <li>Yep 4 Kids Foundation</li>
     <li>Baskin Robbins</li>
     <li>Boy Scouts of America</li>
   </ol>
+
+  <a href="relevant_courses.html">Relevant Courses</a>
+  <a href="contact.html">Contact Me</a>
+  <a href="projects.html">My Projectss</a>
 </body>
 
 </html>
