Added more structure to overall website + tables

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
     <title>Contact Me</title>
   </head>
   <body>
+  <p>devinyerasi@yahoo.com</p>
+  <p>949-378-5973ss</p>
+  <p>Los Angeles, CA</p>
+  <a href="https://www.linkedin.com/in/dyerasi/" target='_blank'>LinkedIn</a>
 
+  <hr noshade size='3'>
+  <a href="index.html">Home Page</a>
+  <a href="relevant_courses.html">Relevant Courses</a>
+  <a href="contact.html">Contact Me</a>
+  <a href="projects.html">My Projects</a>
   </body>
 </html>
