--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,11 @@
     <title>My Projects</title>
   </head>
   <body>
-
+    <hr noshade size='3'>
+    <a href="index.html">Home Page</a>
+    <a href="relevant_courses.html">Relevant Courses</a>
+    <a href="contact.html">Contact Me</a>
+    <a href="projects.html">My Projects</a>
   </body>
 </html>
 <!--
