--- a/relevant_courses.html
+++ b/relevant_courses.html
@@ -14,6 +14,12 @@
     <li>Discrete Mathematics</li>
     <li>Linear Algera and Differential Equations</li>
   </ul>
+
+  <hr noshade size='3'>
+  <a href="index.html">Home Page</a>
+  <a href="relevant_courses.html">Relevant Courses</a>
+  <a href="contact.html">Contact Me</a>
+  <a href="projects.html">My Projects</a>
 </body>
 
 </html>
