Contact Form added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"> <!-- utf-8 covers all characters in unicode-->
-  <title>🧙‍ Devin's Personal Site 🧙‍</title>
+  <title>🧙‍ Devin Yerasi 🧙‍</title>
 </head>
 
 <body>
