--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact Me</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact Me</title>
+</head>
+
+<body>
   <p>devinyerasi@yahoo.com</p>
-  <p>949-378-5973ss</p>
+  <p>949-378-5973</p>
   <p>Los Angeles, CA</p>
   <a href="https://www.linkedin.com/in/dyerasi/" target='_blank'>LinkedIn</a>
+  <br><br>
+
+<hr noshade size="3">
+  <form action="mailto:devinyerasi@yahoo.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value="">
+    <br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value="">
+    <br>
+    <label>Your Message:</label> <br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea>
+    <br>
+    <label>Do you want to sign up for the email list?</label>
+    <input type="checkbox" name="joinEmail" value="">
+    <br> <br>
+    <input type="submit" name="">
+  </form>
 
   <hr noshade size='3'>
   <a href="index.html">Home Page</a>
   <a href="relevant_courses.html">Relevant Courses</a>
   <a href="contact.html">Contact Me</a>
   <a href="projects.html">My Projects</a>
-  </body>
+</body>
+
 </html>
