Added css style sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8"> <!-- utf-8 covers all characters in unicode-->
   <title>🧙‍ Devin Yerasi 🧙‍</title>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
   <h4>UCLA (2018-2022): B.S. Computer Science and Engineering, Minor in Mathematics </h4>
 
 
-  <hr noshade, size='3'>
+  <hr noshade>
   <h3>Experience</h3>
   <table>
     <thead>
@@ -57,7 +59,7 @@
 
   </table>
 
-  <hr noshade, size='3'>
+  <hr noshade>
   <h3>Skills</h3>
   <table>
     <tr>
@@ -78,7 +80,7 @@
     </tr>
   </table>
 
-  <hr noshade, size='3'>
+  <hr noshade>
   <h3>Hobbies</h3>
   <ol>
     <li>Surfing</li>
@@ -91,8 +93,8 @@
   <hr noshade>
   <a href="index.html">Home Page</a>
   <a href="relevant_courses.html">Relevant Courses</a>
-  <a href="contact.html">Contact Me</a>
   <a href="projects.html">My Projects</a>
+  <a href="contact.html">Contact Me</a>
 </body>
 
 </html>
