--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>My Projects</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <hr noshade size='3'>
+    <hr noshade>
     <a href="index.html">Home Page</a>
     <a href="relevant_courses.html">Relevant Courses</a>
     <a href="contact.html">Contact Me</a>
