--- a/relevant_courses.html
+++ b/relevant_courses.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <li>Linear Algera and Differential Equations</li>
   </ul>
 
-  <hr noshade size='3'>
+  <hr noshade>
   <a href="index.html">Home Page</a>
   <a href="relevant_courses.html">Relevant Courses</a>
   <a href="contact.html">Contact Me</a>
