--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
   <a href="https://www.linkedin.com/in/dyerasi/" target='_blank'>LinkedIn</a>
   <br><br>
 
-<hr noshade size="3">
+<hr noshade >
   <form action="mailto:devinyerasi@yahoo.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourName" value="">
@@ -30,7 +31,7 @@
     <input type="submit" name="">
   </form>
 
-  <hr noshade size='3'>
+  <hr noshade >
   <a href="index.html">Home Page</a>
   <a href="relevant_courses.html">Relevant Courses</a>
   <a href="contact.html">Contact Me</a>
